--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,13 +23,16 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Debug Environment Variables
+        run: echo "VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }}"
+
       - name: Set Environment Variable
         run: echo "VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }}" >> $GITHUB_ENV
 
       - name: Build Project
         run: npm run build
         env:
-          VITE_BACKEND_URL: ${{ secrets.VITE_BACKEND_URL }}  # Inject environment variable
+          VITE_BACKEND_URL: ${{ secrets.VITE_BACKEND_URL }} # Inject environment variable
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
