--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,10 @@ name: Deploy Vite App
 on:
   push:
     branches:
-      - main  # Change if your default branch is different
+      - main
 
 permissions:
-  contents: write  # Required for deployment
+  contents: write
 
 jobs:
   deploy:
@@ -16,21 +16,20 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4  # Use latest Node.js setup
+        uses: actions/setup-node@v4
         with:
-          node-version: 22.12.0  # Updated to Node.js 22.12.0
+          node-version: 22.12.0
 
       - name: Install Dependencies
         run: npm install
 
-      - name: Debug Environment Variables
-        run: echo "🔍 VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }}"
-
+      # ✅ Inject VITE_BACKEND_URL into a .env file
       - name: Create .env File
         run: echo "VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }}" > .env
 
+      # ✅ Debug: Check if .env is created properly
       - name: Verify .env File
-        run: cat .env  # Check if .env file contains the variable
+        run: cat .env
 
       - name: Build Project
         run: npm run build
