--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main  # Runs when you push to the main branch
 
+permissions:
+  contents: write  # Allows pushing to gh-pages branch
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -16,10 +19,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: latest  # Always use the latest Node.js version
 
       - name: Install dependencies
-        run: npm install  # or yarn install
+        run: npm install  # Or yarn install
 
       - name: Inject environment variables
         run: |
@@ -32,7 +35,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages  # Creates gh-pages if it doesn’t exist
-          folder: dist
+          branch: gh-pages  # Will create gh-pages if missing
+          folder: dist  # Deploys the build output
           clean: true  # Removes old files to prevent conflicts
-
