--- a/back-end/.env.sample
+++ b/back-end/.env.sample
@@ -1,15 +1,20 @@
-#create an .env file in root folder and copy this data there don't change vairbale names just your values instead of this placeholders
+# Create a `.env` file in the root folder and copy this data there.
+# Don't change variable names—just replace the placeholders with your actual values.
 
-PORT= "your port number"
+# Server Port
+PORT="your_port_number"
 
-MONGODB_URI= "your mongo db atlas uri or mongodb://127.0.0.1:27017 for local db"
+# MongoDB Configuration
+MONGODB_URI="your_mongodb_atlas_uri_or_mongodb://127.0.0.1:27017_for_local_db"
+MONGODB_DB_NAME="your_database_name"
 
-MONGODB_DB_NAME="name of your db"
+# CORS Configuration
+CORS_ORIGIN="your_frontend_url"
 
-CORS_ORIGIN="frontend url"
+# Access Token Configuration
+ACCESS_TOKEN_SECRET="your_access_token_secret"
+ACCESS_TOKEN_EXPIRY="1d"  # Example: 1d (1 day) or 10d (10 days)
 
-ACCESS_TOKEN_SECRET="your access token secret string"
-ACCESS_TOKEN_EXPIRY="expiry for acces token eg. 1d for 1 day or 10d for 10days"
-
-REFRESH_TOKEN_SECRET="your access token secret string"
-REFRESH_TOKEN_EXPIRY="expiry for refresh token eg. 1d for 1 day or 10d for 10days"
+# Refresh Token Configuration
+REFRESH_TOKEN_SECRET="your_refresh_token_secret"
+REFRESH_TOKEN_EXPIRY="7d"  # Example: 7d (7 days) or 30d (30 days)
