--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: latest  # Always use the latest Node.js version
+          node-version: 22.12.0  # Always use the latest Node.js version
 
       - name: Install dependencies
         run: |
