--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,8 +8,8 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "dev": "cross-env NODE_ENV=development nodemon src/server.js",
+    "start": "cross-env NODE_ENV=production node src/server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -21,6 +21,7 @@
     "mongoose": "^8.11.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.9"
   }
 }
